--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,3 @@
 <h1>Bienvenido a Patron Their Future</h1>
 <p>¡Ayuda a gatitos y perritos a cumplir su sueño de ser estrellas del fútbol!</p>
+<h2>CHUPALOOOOO</h2>
